# vrcwscrape

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  DOLT_README.md  IMPL.md  README.md  analyze.py  docker-compose.yml  dolt-sql-server.service  flake.nix  import_worlds.py  main.py  pyproject.toml  vrcwscrape.service  vrcwscrape.timer
.claude/agents/: chen-slice-implementer.md  paper-auditor.md
.claude/workflows/: wave-review.js
docs/: chen-strict-reimplementation.md  faceted-search-prototype.md  greybox-eval.md  greybox-plan.md  large-scale-growth-research.md  lots-wave-plan.md  macro-roads-nuclei-plan.md  post-s7-deficiency-review.md  regional-2_5d-research.md  road-layout-research.md  terrain-roads-research.md  wave2-plan.md
docs/leaf_compare/: img0.3_exemplars.md  text_exemplars.md
mapgen/: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  fhs.nix  pyproject.toml  shell.nix
mapgen/scripts/: debug_json.py  debug_namer.py  debug_namer2.py  debug_ollama.py  debug_ollama2.py  diag_collapse.py  diag_img_discrim.py  diag_selection.py  diag_thintext.py  diag_weight_sweep.py  fetch-sample-data.sh  introspect_topo.py  introspect_topo2.py  mk_thumb_list.py  rebake_scale_greybox.sh  run_chen_strict_scale_suite.py  run_chen_strict_shapes.py  run_full.sh  run_image_fusion.sh  run_layout_variants.sh  run_leaf_compare.sh  run_r1_app_export.py  run_r1_arm_a_chen.py  run_r1_arm_b_baseline.py  run_r1_compare.py  run_r1_greybox_mesh.py  run_r1_hybrid.py  run_r1_island_inputs.py  run_r1_macro.py  run_r1_seam_spike.py  run_r1_zoom_review.py  run_r2_fan_probe.py  run_scale_test.sh  run_topo_v2.sh
mapgen/src/mapgen/: __init__.py  caption.py  chen_artifacts.py  chen_core.py  chen_field.py  chen_generate.py  chen_mesh.py  chen_metrics.py  chen_optimize.py  chen_proto.py  chen_streets.py  city_layout.py  city_proto.py  cluster.py  common.py  dr_sweep.py  embed_image.py  embed_text.py  export_app.py  fuse.py  hierarchy.py  island_toponymy.py  land.py  physical_hierarchy.py  r1_app_export.py  r1_arm_a.py  r1_arm_b.py  r1_compare.py  r1_connect.py  r1_inputs.py  r1_lots.py  r1_macro.py  r1_mesh.py  r1_seam.py  r1_zoom.py  raster_poly.py  reduce.py  regions.py  relax.py  render_static.py  (+2 more)
mapgen/tests/: test_chen_artifacts.py  test_chen_core.py  test_chen_field.py  test_chen_generate.py  test_chen_mesh.py  test_chen_metrics.py  test_chen_optimize.py  test_chen_proto.py  test_chen_scale_suite.py  test_chen_streets.py  test_city_proto.py  test_r1_app_export.py  test_r1_connect.py  test_r1_hybrid.py  test_r1_lots.py  test_r1_macro.py  test_r1_mesh.py  test_r1_seam.py  test_r1_zoom.py
scripts/: etl.py
src/vrchat_scraper/: __init__.py  circuit_breaker.py  config.py  database.py  http_client.py  main.py  models.py  protocols.py  rate_limiter.py  scraper.py
tests/: __init__.py  fakes.py  test_circuit_breaker.py  test_database.py  test_deleted_worlds_exclusion.py  test_models.py  test_rate_limiter.py  test_raw_api_storage.py  test_raw_file_metadata_storage.py  test_scraper.py  test_scraper_integration.py  test_scraper_integration_slow.py  test_scraper_loops.py  test_utils.py
tests/fixtures/: image_file_metadata.json  recent_worlds.json  unity_package_file_metadata.json  world_detail.json
web/: .gitignore  README.md  index.html  package-lock.json  package.json  smoke.mjs  vite.config.js
web/src/: App.jsx  Map.jsx  Sidebar.jsx  config.js  duckdb.js  main.jsx  style.css  util.js
