[project]
name = "vrcwscrape"
version = "0.1.0"
description = "maintain a copy of the vrchat worlds metadata database"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "logfire>=3.21.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "aiosqlite>=0.20.0",
    "opentelemetry-instrumentation-httpx>=0.49.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.49.0",
    "opentelemetry-instrumentation-sqlite3>=0.49.0",
    "opentelemetry-instrumentation-mysql>=0.49.0",
    "pydantic-settings>=2.10.0",
    "python-dateutil>=2.9.0.post0",
    "duckdb>=1.0.0",
    "marimo>=0.19.6",
    "sqlglot>=28.6.0",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "ibis-framework>=11.0.0",
    "pymysql>=1.1.1",
]

[tool.uv]
package = true

[tool.logfire]
ignore_no_config = true

[project.scripts]
main = "vrchat_scraper.main:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.0",
]
