[project]
name = "mapgen"
version = "0.1.0"
description = "Offline pipeline: embeddings -> dimensionality reduction -> clustering -> labeled static map for the VRChat worlds latent-map frontend"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "polars>=1.10",
    "pyarrow>=16",
    "httpx>=0.27",
    "tqdm>=4.66",
    "scikit-learn>=1.4",
    "umap-learn>=0.5.6",
    "pacmap>=0.7",
    "hdbscan>=0.8.38",
    "datamapplot>=0.4",
    "shapely>=2.0",
]

[project.optional-dependencies]
# Heavy image-encoder stack, kept out of the core install. `uv sync --extra image`.
# The default torch wheel runs on CPU and (if libcuda is exposed in the FHS env)
# on the GPU with no code change.
image = [
    "torch>=2.2",
    "open_clip_torch>=2.24",
    "pillow>=10.0",
]
# Hierarchical multiresolution clustering + LLM topic naming (Tutte's toponymy)
# -> datamapplot interactive map with zoom-dependent layered labels.
# uv sync --extra topo
topo = [
    "toponymy",
    "sentence-transformers>=3.0",
    "ollama",
]

[project.scripts]
mapgen-embed = "mapgen.embed_text:main"
mapgen-reduce = "mapgen.reduce:main"
mapgen-relax = "mapgen.relax:main"
mapgen-cluster = "mapgen.cluster:main"
mapgen-render = "mapgen.render_static:main"
mapgen-regions = "mapgen.regions:main"
mapgen-caption = "mapgen.caption:main"
mapgen-embed-image = "mapgen.embed_image:main"
mapgen-fuse = "mapgen.fuse:main"
mapgen-toponymy = "mapgen.hierarchy:main"
mapgen-physical-hierarchy = "mapgen.physical_hierarchy:main"
mapgen-app-export = "mapgen.export_app:main"
mapgen-land = "mapgen.land:main"

[dependency-groups]
dev = ["ruff>=0.6", "ty", "pre-commit>=3.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mapgen"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.11"
